[gd_scene load_steps=8 format=3 uid="uid://bj1at7il1eg26"]

[ext_resource type="Script" path="res://scenes/Scenes/main.gd" id="1_huio0"]
[ext_resource type="Script" path="res://scenes/Scenes/MainMenuControl.gd" id="1_iugtq"]
[ext_resource type="Texture2D" uid="uid://fa3ogirp6dpx" path="res://secondMainBGfinadl.jpg" id="1_pql8w"]
[ext_resource type="Script" path="res://scripts/Classes/level_data.gd" id="2_yl5up"]

[sub_resource type="Resource" id="Resource_q4d64"]
script = ExtResource("2_yl5up")
level_id = 0
level_name = "TransitionScene"
level_completed = false
level_unlocked = false
level_path = "Scenes/transition_scene"

[sub_resource type="Resource" id="Resource_boy85"]
script = ExtResource("2_yl5up")
level_id = 1
level_name = "The First Level"
level_completed = false
level_unlocked = false
level_path = "Scenes/level_01"

[sub_resource type="Resource" id="Resource_gt5sh"]
script = ExtResource("2_yl5up")
level_id = 2
level_name = "FinalBoss"
level_completed = false
level_unlocked = false
level_path = "FinalBoss/boss_room"

[node name="Main" type="Node"]
script = ExtResource("1_huio0")
available_levels = Array[ExtResource("2_yl5up")]([SubResource("Resource_q4d64"), SubResource("Resource_boy85"), SubResource("Resource_gt5sh")])

[node name="2DScene" type="Node2D" parent="."]

[node name="UI Main" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI Main"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_iugtq")
metadata/_edit_use_anchors_ = true

[node name="BG" type="TextureRect" parent="UI Main/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pql8w")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="UI Main/Control/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI Main/Control/BG/MarginContainer"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="UI Main/Control/BG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.396078, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.945098, 0.631373, 0.278431, 1)
theme_override_colors/font_outline_color = Color(0.694118, 0.564706, 0.352941, 1)
theme_override_font_sizes/font_size = 40
text = "

I    N    F    E    R    N    U    M "
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayBtn" type="Button" parent="UI Main/Control/BG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Play Game "
flat = true

[node name="InstructionsBtn" type="Button" parent="UI Main/Control/BG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Instructions "
flat = true

[node name="QuitBtn" type="Button" parent="UI Main/Control/BG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit"
flat = true

[connection signal="pressed" from="UI Main/Control/BG/MarginContainer/VBoxContainer/PlayBtn" to="UI Main/Control" method="_on_play_btn_pressed"]
[connection signal="pressed" from="UI Main/Control/BG/MarginContainer/VBoxContainer/InstructionsBtn" to="UI Main/Control" method="_on_instructions_btn_pressed"]
[connection signal="pressed" from="UI Main/Control/BG/MarginContainer/VBoxContainer/QuitBtn" to="UI Main/Control" method="_on_quit_btn_pressed"]
